# cyclegan-libtorch

./: .clang-format  .gitignore  .pylintrc  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml
include/: blocks.hpp  cyclegan.hpp  dataset.hpp  dcgan.hpp  generator.hpp  globals.hpp  imagepool.hpp  imagetools.hpp  structs.hpp  train.hpp
python/: infer-cyclegan.py
src/: main.cpp
